--- a/client/views/partials/admin/adminLogin.html
+++ b/client/views/partials/admin/adminLogin.html
@@ -1,4 +1,4 @@
-<div class="col-sm-offset-3 col-sm-6" ng-controller="AdminLoginCtrl" >
+<div class="col-sm-offset-2 col-sm-6 col-xs-12" ng-controller="AdminLoginCtrl" >
     <div class="admin-login">
         <h3>Admin Login</h3>
         <form class="login-form mt-10" ng-submit="logIn()">
