--- a/client/views/partials/admin/administrators/franchises.html
+++ b/client/views/partials/admin/administrators/franchises.html
@@ -20,7 +20,7 @@
         </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="franchiseParams">
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="franchiseParams">
         <tr ng-repeat="franchise in currentPageOfFranchises" style="text-align: center;">
             <td data-title="'Full Name'" sortable="'fullName'" class="clickable-item">
                 {{franchise.fullName}}
