--- a/client/views/partials/admin/services/addDevice.html
+++ b/client/views/partials/admin/services/addDevice.html
@@ -1,5 +1,5 @@
-<div ng-controller="addAndAssignDevicesCrtl">
-    <table class="table table-bordered table-responsive">
+<div ng-controller="addAndAssignDevicesCrtl" class="col-xs-12">
+    <table class="table table-bordered">
         <thead>
         <tr>
             <!--<th></th>-->
