--- a/client/views/partials/admin/services/inHandGpsDevices.html
+++ b/client/views/partials/admin/services/inHandGpsDevices.html
@@ -4,7 +4,7 @@
         <div class="clearfix"></div>
     </ul>
     <div class="table-res">
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+    <table class="table table-bordered table-striped table-condensed table-hover"
            ng-table="deviceParams">
         <tr ng-repeat="device in currentPageOfDeviceDetails" style="text-align: center;">
             <td data-title="'S No'">
