--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <div class="mt-10">
-        <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+        <table class="table table-bordered table-striped table-condensed table-hover"
                ng-table="driverParams">
             <tr ng-repeat="drivers in currentPageOfDrivers" style="text-align: center;">
                 <td data-title="'Driver ID'" sortable="'driverId'" class="clickable-item">
