--- a/client/views/partials/routeConfig/list.html
+++ b/client/views/partials/routeConfig/list.html
@@ -14,7 +14,7 @@
         <div class="col-sm-3 pall-zero"><h3>Details</h3></div>
     </div>
     <div class="mt-10">
-        <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+        <table class="table table-bordered table-striped table-condensed table-hover"
                ng-table="studentParams">
             <tr ng-repeat="x in routeConfigs" style="text-align: center;">
                 <td data-title="'Name'" sortable="'name'" class="clickable-item">
