--- a/client/views/partials/admin/administrators/adminRoles.html
+++ b/client/views/partials/admin/administrators/adminRoles.html
@@ -19,7 +19,7 @@
         </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="roleParams">
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="roleParams">
         <tr ng-repeat="role in currentPageOfRoles" style="text-align: center;">
             <td data-title="'Role'" sortable="'role'" class="clickable-item">
                 {{role.role}}
