--- a/client/views/partials/admin/administrators/administrators.html
+++ b/client/views/partials/admin/administrators/administrators.html
@@ -19,7 +19,7 @@
         </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="employeeParams">
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="employeeParams">
         <tr ng-repeat="employee in currentPageOfEmployees" style="text-align: center;">
             <td data-title="'First Name'" sortable="'firstName'" class="clickable-item">
                 {{employee.firstName}}
