--- a/client/views/partials/admin/customers/editUpdateTruckOwner.html
+++ b/client/views/partials/admin/customers/editUpdateTruckOwner.html
@@ -305,7 +305,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="table-res mt-10">
-                        <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive text-center"
+                        <table class="table table-bordered table-striped table-condensed table-hover text-center"
                                ng-table="truckParams">
                             <tbody>
                             <tr ng-repeat="trucks in currentPageOfTrucks">
