--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -2,25 +2,18 @@
     <h4>GPS / ERP Account</h4>
     <div class="col-xs-12">
         <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="status.isOpen">
+            <div uib-accordion-group class="panel-default mob-pad" is-open="status.isOpen">
                 <uib-accordion-heading>
                     User Information <i class="pull-right glyphicon"
                                         ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                 </uib-accordion-heading>
-                <div class="col-xs-12">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group" style="margin-left: 15px;">
-                          <!--  <select class="form-control custom-form-control" ng-model="deviceDetails.accountId"
-                                    ng-change="getTrucksOfAccount()">
-                                <option ng-repeat="account in accounts" value="{{account._id}}">{{account.userName}}
-                                </option>
-
-                            </select>-->   <div class="form-group select-box">
-                            <ui-select ng-model="deviceDetails.accountId" theme="select2"
-                                       style="min-width: 390px;"
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                        <div class="form-group select-ac-box">
+                            <ui-select ng-model="deviceDetails.accountId" theme="select2" class="account-select-box"
                                        title="Customer *" reset-search-input="false" ng-change="getTrucksOfAccount()">
 
-                                <ui-select-match placeholder="Select Customer *" class="form-control custom-form-control" >
+                                <ui-select-match placeholder="Select Customer *" class="form-control ac-form-control" >
                                     {{$select.selected.userName || userName}}
                                 </ui-select-match>
                                 <ui-select-choices
@@ -183,7 +176,6 @@
                         </div>
                     </div>
                     <div>Current Location: MR11 Rd, Dewas Naka, Lasudia Mori, Indore, Madhya Pradesh 453771, India</div>
-                </div>
 
             </div>
         </uib-accordion>
@@ -191,7 +183,7 @@
             <div uib-accordion-group class="panel-default" is-open="status.isOpenOne">
                 <uib-accordion-heading>Assign GPS Plan<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.isOpenOne, 'glyphicon-chevron-right': !status.isOpenOne}"></i>
                 </uib-accordion-heading>
-                <div class="col-xs-12" ng-show="showGpsForm">
+                <div ng-show="showGpsForm">
                     <ul class="list-inline">
                         <li class="col-sm-4 form-group">
                             <select class="form-control order-form-control" ng-model="GPSPlanDEtails.planId">
@@ -223,7 +215,8 @@
                     </ul>
                     <div ng-repeat="err in GPSPlanDEtails.errors">{{err}}</div>
                 </div>
-                <div class="col-xs-12 mt-20" ng-show="true">
+                <div class="table-res mt-20" ng-show="true">
+
                     <table class="table table-bordered">
                         <thead>
                         <th>Plan Type</th>
