--- a/client/views/partials/admin/orderProcess/loadOwnerBilling.html
+++ b/client/views/partials/admin/orderProcess/loadOwnerBilling.html
@@ -16,7 +16,8 @@
                                               ng-class="{'glyphicon-chevron-down': status.isOpen,
                                            'glyphicon-chevron-right': !status.isOpen}"></i>
                     </uib-accordion-heading>
-                    <a href="#" class="print-icon" ng-click="printLoadOwnerBill();"><span class="glyphicon glyphicon-print"></span></a>
+                    <a href="#" class="print-icon" ng-click="printLoadOwnerBill();"><span
+                            class="glyphicon glyphicon-print"></span></a>
                     <div class="row truckinfomain">
                         <div class="truckinfo">
                             <p><b>{{orderDetails.orderId}} Given Commission: 1000.00 | Expected Commission: 0 | Obtained
@@ -384,4 +385,265 @@
             </div>
         </script>
     </div>
+
+    <div class="load_owner_details" style="display: none;">
+        <head>
+            <title>Load Owner Billing Details</title>
+        </head>
+        <div class="container">
+            <h3 class="text-center">Load Owner Billing Details</h3>
+            <div style="border: 1px solid #ccc; padding: 10px;margin:20px 0;border-radius: 5px;">
+                <div style="border: 1px solid #ccc; padding: 10px;margin:10px 0;border-radius: 5px;">
+                    <p><b>#{{orderDetails.orderId}} Given Commission: 1000.00 | Expected Commission: 0 |
+                        Obtained Commission: 0</b></p>
+                    <div style="margin-top: 15px;">
+                        <table style="border: 1px solid #ccc;width:100%;">
+                            <thead>
+                            <tr style="text-align: left;">
+                                <th style="border-bottom: 1px solid #ccc;">Load Owner Info:</th>
+                                <th style="border-bottom: 1px solid #ccc;">Company Info:</th>
+                                <th style="border-bottom: 1px solid #ccc;">Driver Info:</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Load Owner ID:</b> {{orderDetails.orderId || 'Not Available'}}</h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Company:</b> {{orderDetails.truckOwnerId.companyName || 'Not Available'}}
+                                    </h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Name:</b> {{orderDetails.driverName || 'Not Available'}}
+                                    </h6>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Name:</b>{{orderDetails.truckOwnerId.firstName || 'Not Available'}}
+                                    </h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Address:</b> {{orderDetails.truckOwnerId.contactAddress || 'Not Available'}}
+                                    </h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Mobile:</b> {{orderDetails.driverMobile || 'Not Available'}}</h6>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>Mobile:</b> {{orderDetails.truckOwnerId.contactPhone || 'Not Available'}}
+                                    </h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>City:</b> {{orderDetails.truckOwnerId.city || 'Not Available'}}
+                                    </h6>
+                                </td>
+                                <td style="width: 33%;">
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;"><b>Truck
+                                        No:</b> {{orderDetails.registrationNo |uppercase}}</h6>
+                                </td>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin:2px;font-size: 13px;font-weight: normal;">
+                                        <b>State:</b> {{orderDetails.truckOwnerId.state || 'Not Available'}}</h6>
+                                </td>
+                                <td style="width: 33%;"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 33%;">
+                                    <h6 style="padding: 0;margin: 2px;font-size: 13px;font-weight: normal;">
+                                        <b>Email:</b> {{orderDetails.truckOwnerId.email || 'Not Available'}}</h6>
+                                </td>
+                                <td style="width: 33%;"></td>
+                                <td style="width: 33%;"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div>
+                    <p><b>Truck OwnerBilling (per Transaction(Default)):</b></p>
+                </div>
+                <div>
+                    <table class="table table-hover" style="width: 100%;border: 1px solid #ccc;">
+                        <thead style="text-align: left;">
+                        <th style="width: 25%;">Date</th>
+                        <th style="width: 25%;">Comment</th>
+                        <th style="width: 25%;">Prefix</th>
+                        <th style="width: 25%;">Amount</th>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="payments in paymentsDetails.payments ">
+                            <td style="width: 25%;">{{payments.createdAt | date:'dd-MM-yyyy'}}</td>
+                            <td style="width: 25%;">{{payments.comment}}</td>
+                            <td style="width: 25%;">{{payments.prefix}}</td>
+                            <td style="width: 25%;"><i class="fa fa-inr"></i> {{payments.amount}}</td>
+                        </tr>
+                        <tr>
+                            <td style="width: 25%;"><b></b></td>
+                            <td style="width: 25%;"><b></b></td>
+                            <td style="width: 25%;"><b>Total</b></td>
+                            <td style="width: 25%;"><b><i class="fa fa-inr"></i> {{paymentsDetails.total}}.00</b></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div>
+                    <p><b>Truck Owner Transactions:</b></p>
+                </div>
+                <div class="col-xs-12">
+                    <table class="table table-hover" style="width: 100%;border: 1px solid #ccc;">
+                        <thead style="text-align: left">
+                        <th style="width: 16.6%">Date</th>
+                        <th style="width: 16.6%">Comment</th>
+                        <th style="width: 16.6%">Prefix</th>
+                        <th style="width: 16.6%">Payment By</th>
+                        <th style="width: 16.6%">Payment Type</th>
+                        <th style="width: 16.6%">Amount</th>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="transacDetails in transactionsDetails.transactions">
+                            <td style="width: 16.6%">{{transacDetails.createdAt | date:'dd-MM-yyyy'}}</td>
+                            <td style="width: 16.6%">{{transacDetails.comment}}</td>
+                            <td style="width: 16.6%">{{transacDetails.prefix}}</td>
+                            <td style="width: 16.6%">{{transacDetails.paymentBy.firstName || 'NA'}}</td>
+                            <td style="width: 16.6%">{{transacDetails.paymentType || 'NA'}}</td>
+                            <td style="width: 16.6%"><i class="fa fa-inr"></i> {{transacDetails.amount}}</td>
+                        </tr>
+                        <tr>
+                            <td style="width: 16.6%"></td>
+                            <td style="width: 16.6%"></td>
+                            <td style="width: 16.6%"></td>
+                            <td style="width: 16.6%"></td>
+                            <td style="width: 16.6%"><b>Total</b></td>
+                            <td style="width: 16.6%"><b><i class="fa fa-inr"></i> {{transactionsDetails.total}}</b></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div>
+                    <p><b>Route Expenses:</b></p>
+                </div>
+                <div style="border: 1px solid #ccc; padding: 10px;margin:10px 0;border-radius: 5px;">
+                    <table>
+                        <thead style="text-align: left;">
+                        <th style="width:25%">Disel Expenses</th>
+                        <th style="width:25%">Toll Gate Charges</th>
+                        <th style="width:25%">Loading/Unloading Charges</th>
+                        <th style="width:25%">Police Charges</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td style="width: 25%">{{orderDetails.dieselCharges || 'Not Available'}}</td>
+                            <td style="width: 25%">{{orderDetails.tollGateCharges || 'Not Available'}}</td>
+                            <td style="width: 25%">{{orderDetails.loadingUnloadingCharges || 'Not Available'}}</td>
+                            <td style="width: 25%">{{orderDetails.policeCharges || 'Not Available'}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+
+                </div>
+                <!--  <div class="col-xs-12">
+                      <div class="col-xs-12">
+                          <p><b>Comments:</b></p>
+                          <table class="table table-hover">
+                              <thead>
+                              <th>Date</th>
+                              <th>Comment</th>
+                              <th>Admin</th>
+                              </thead>
+                              <tbody>
+                              <tr ng-repeat="comment in comments">
+                                  <td>{{comment.createdAt |date:'dd-MM-yyyy'}}</td>
+                                  <td>{{comment.comment}}</td>
+                                  <td>{{comment.createdBy.firstName}}</td>
+                              </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                  </div>-->
+            </div>
+            <p><b>Truck Booking Details</b></p>
+            <div style="border: 1px solid #ccc; padding: 10px;margin:20px 0;border-radius: 5px;">
+                <table>
+                    <tr>
+                        <td style="width: 50%;"><b>Date Ordered:</b> {{orderDetails.dateOfOrder | date:'dd-MM-yyyy'}}
+                        </td>
+                        <td style="width: 50%;"><b>Order Status:</b> {{orderDetails.status}}</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%;"><b>Date Available:</b> 21-06-2016 05:00 AM</td>
+                        <td style="width: 50%"><b>Tracking Available:</b>{{orderDetails.tracking || 'Not Available'}}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Insurance Available:</b> {{orderDetails.insurance || 'Not Available'}}
+                        </td>
+                        <td style="width: 50%"><b>Pickup Point:</b> {{orderDetails.source}}</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Pickup Date/Time:</b> {{orderDetails.pickupDate | date:'dd-MM-yyyy'}}
+                        </td>
+                        <td style="width: 50%"><b>Goods Type:</b> {{orderDetails.goodsType || 'Not Available'}}</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Source Address:</b> {{orderDetails.source || 'Not Available'}}</td>
+                        <td style="width: 50%"><b>Destination Address:</b> {{orderDetails.destination || 'Not
+                            Available'}}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Payable Amount :</b> {{orderDetails.paybleAmounts || 'Not Available'}}
+                        </td>
+                        <td style="width: 50%"><b>Truck Type:</b> {{orderDetails.truckType || 'Not Available'}}</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Registration Number:</b> {{orderDetails.registrationNo || 'Not
+                            Available'}}
+                        </td>
+                        <td style="width: 50%"><b>Driver Name: </b> {{orderDetails.driverName || 'Not Available'}}</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%"><b>Driver Mobile: </b> {{orderDetails.driverMobile || 'Not Available'}}
+                        </td>
+                        <td style="width: 50%"></td>
+                    </tr>
+                </table>
+            </div>
+            <!--      <div class="col-x-12">
+                      <p style="font-size: 18px"><b>Route History</b></p>
+                      <ul class="list-inline">
+                          <li class="col-xs-12"><b>Truck Source Start Date Time</b> : {{orderDetails.truckStartDate ||
+                              'Not-Available'}}
+                          </li>
+                          <li class="col-xs-12"><b>Truck Destination Reach Date Time</b> :
+                              {{orderDetails.truckDestinationDate ||
+                              'Not Available'}}
+                          </li>
+                          <li class="col-xs-12"><b>Truck Route Run Time</b> : {{orderDetails.truckRouteRunTime ||
+                              'Not-Available'}}
+                          </li>
+                      </ul>
+                  </div>-->
+        </div>
+
+    </div>
+    </body>
 </div>
