--- a/client/views/partials/admin/services/deviceManagement.html
+++ b/client/views/partials/admin/services/deviceManagement.html
@@ -5,9 +5,9 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="searchString" ng-change="init();">
+                           ng-model="searchString">
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        <button class="btn btn-default" type="submit" ng-click="init();"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
                 </div>
