route config chenged

--- a/client/views/partials/routeConfig/addRouteConfig.html
+++ b/client/views/partials/routeConfig/addRouteConfig.html
@@ -19,7 +19,7 @@
             <div class="form-group col-xs-12">
                 <div class="styling-input-list">
                     <input id="source" type="text" class="form-control custom-form-control" placeholder="Source*"
-                           ng-model="route.source.address">
+                           ng-model="route.sourceAddress">
                     <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
                         <div class="mapIcon" ng-click="showMapDialog('source')">
                             <span class="glyphicon glyphicon-map-marker"></span>
@@ -31,7 +31,7 @@
                 <div class="styling-input-list">
                     <input id="destination" type="text" class="form-control custom-form-control"
                            placeholder="Destination*"
-                           ng-model="route.destination.address">
+                           ng-model="route.destinationAddress">
                     <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
                         <div class="mapIcon" ng-click="showMapDialog('destination')">
                             <span class="glyphicon glyphicon-map-marker"></span>
