--- a/client/views/partials/routeConfig/list.html
+++ b/client/views/partials/routeConfig/list.html
@@ -24,10 +24,10 @@
                     {{x.distance}}
                 </td>
                 <td data-title="'Source'" sortable="'source'" class="clickable-item">
-                    {{x.source.address}}
+                    {{x.sourceAddress}}
                 </td>
                 <td data-title="'Destination'" sortable="'destination'" class="clickable-item">
-                    {{x.destination.address}}
+                    {{x.destinationAddress}}
                 </td>
 
                 <td data-title="'Action'" class="col-sm-2">
